src/static/css/common.css
@import url('https://fonts.googleapis.com/css2?family=Sono:wght@200..800&display=swap');
@import url("systems.css");

* {
    font-family: 'Sono', sans-serif;
    margin: 0;
    padding: 0;
}

:root {
    --background-color: #151515;
    --foreground-color: #1D1D1D;
    --in-foreground-color: #232323;
    --white: #FAFAFA;
}

body {
    background-color: var(--background-color);
    color: var(--white);
    overflow: hidden;
}

.loader {
    position: absolute;
    opacity: 1;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--background-color);
}

.background {
    position: relative;
    width: 100vw;
    z-index: -1;
}

.background-dim {
    content: '';
    position: absolute;
    width: 100vw;
    height: 100vh;
    box-shadow: inset 70vw -60vh 40em 5em rgba(21,21,21,1);
    background-color: rgba(21,21,21,0.7);
    z-index: 1;
}

.background > img {
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(40%, -40%);
    width: 90%;
    z-index: 0;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    padding: 1em;
    height: calc(100vh - 2em);
    gap: 1em;
}

.block {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-content: center;
    width: 100%;
    height: 100%;
    max-height: 100%;
    gap: 1em;
    flex: 1;
}

.block:nth-child(1) {
    align-items: flex-end;
}

.big-card {
    display: flex;
    flex-direction: column;
    height: calc(100% - 2em);
    padding: 1em
}

.services-container, .docker-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 1em;
    overflow-y: auto;
    max-height: 100%;
    scrollbar-width: thin;
    scrollbar-color: var(--in-background-color) var(--background-color);
    padding: 0 0.5em;
}

.services-container > .card, .docker-container > .card {
    background-color: var(--in-foreground-color);
    flex: 1 0 25%;
}

.block:nth-child(1) > .big-card:nth-child(2) {
    height: auto;
    display: flex;
    flex-direction: row;
    gap: 1em;
    background-color: #000000;
}

.block:nth-child(1) > .big-card:nth-child(2) > .card {
    background-color: #000000;
}

.block:nth-child(1) {
    max-height: calc(90% - 1em);
}

.block:nth-child(2) {
    max-height: 10%;
}

.block:nth-child(1) > .big-card {
    gap: 1em;
}

.card, .big-card {
    background-color: var(--foreground-color);
    border-radius: 10px;
    max-height: 100%;
    flex: 1;
}

.card {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.card-desc {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 100%;
    padding: 1em;
}

.card-desc > * {
    height: 100%;
}

.card-desc > p:first-child {
    text-transform: uppercase;
    font-size: 1.25em;
}

.big-card > .card {
    background-color: var(--in-foreground-color);
}

.progress-bar {
    width: 100%;
    height: 10px;
    background-color: var(--in-foreground-color);
}

.progress-bar-fill {
    height: 10px;
    background-color: var(--ubuntu-color);
}

.ascii-art {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.ascii-art > img {
    mix-blend-mode: plus-lighter;
    filter: invert(1);
    max-width: 100%;
    max-height: 100%;
}

#ascii-art-text {
    font-size: 0.5em;
}

.neofetch > *, .neofetch > * > *, #ascii-art-text {
    font-family: 'Courier New', monospace !important;
}

.cpu-cores-container {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
}

.cpu-core {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    flex: 1;
    background-color: var(--in-foreground-color);
}

.copyright {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--in-foreground-color);
    margin-top: auto;
    padding: 1em;
    border-radius: 10px;
}

a {
    text-decoration: underline;
}

.notification-container {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
    gap: 1em;
    top: 1em;
    right: 1em;
    z-index: 10;
}

.notification {
    opacity: 0;
    display: flex;
    flex-direction: row;
    width: fit-content;
    height: fit-content;
    box-shadow: 8px 8px 10px rgba(0,0,0,0.5);
}

.notification > .notification-body {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: var(--foreground-color);
    padding: 1.5em;
    border-radius: 10px;
    gap: 0.5em;
    z-index: 5;
}

.notification > .close-notification {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0.25em;
    right: 0.25em;
    cursor: pointer;
    border-radius: 100%;
    width: 1em;
    height: 1em;
    z-index: 6;
}

.notification-progress {
    content: "";
    position: absolute;
    top: -0.125em;
    left: -0.125em;
    width: calc(100% + 0.25em);
    height: calc(100% + 0.25em);
    background: linear-gradient(to right, rgba(255,255,255,0.5) 50%, rgba(250,250,250,0) 50%);
    background-size: 200% 100%;
    background-position: 0% 0;
    border-radius: 10px;
    z-index: 3;
}

.notification.red {
    background-color: rgb(114, 32, 32);
}

.notification.green {
    background-color: rgb(30, 99, 30);
}

pre {
    user-select: none;
}

@media only screen and (max-width: 900px) {
    body {
        overflow: auto;
    }

    .container {
        height: auto;
    }

    .background-dim {
        display: none;
    }

    .background {
        display: none;
    }

    .block {
        flex-direction: column;
    }

    .block:nth-child(1) {
        max-width: 100%;
    }

    .block:nth-child(1) > .big-card:nth-child(2) {
        flex-direction: column;
    }

    .block:nth-child(1) > .big-card {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .block:nth-child(2) { 
        max-height: 100%;
    }

    .cpu-cores-container {
        min-height: 4vh;
    }

    .copyright {
        text-align: center;
        width: calc(100% - 2.5em);
    }

    .services-container, .docker-container {
        width: calc(100% - 0.5em);
    }
}

